--- a/index.html
+++ b/index.html
@@ -1,72 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>henriyouu</title>
-  <link rel="stylesheet" href="style.css" media="screen">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
-  <section class="hero overlay" data-stellar-background-ratio="0.3">
-    <div class="content">
-      <h1 >Henry Yu</h1>
-      <h3>Welcome To My Life</h3>
-      <a class="btn" href="https://www.linkedin.com/in/henryhyu">My LinkedIn</a>
-      <a class="btn" href="https://ataintedcanvas.wordpress.com">My Blog</a>
-    </div>
-  </section>
 
-  <section class="wrapper">
-    <div class="content">
-      <h2>About Me:</h2>
-      <p>Hey. Before you continue to read about what I have to say, I would just like to thank you for dropping by my page. It means a lot to me. Really really.
+<section class="hero overlay" data-stellar-background-ratio="0.3">
+  <div class="content">
+    <h1 >Henry Yu</h1>
+    <h3>Welcome To My Life</h3>
+    <a class="btn" href="https://www.linkedin.com/in/henryhyu">My LinkedIn</a>
+    <a class="btn" href="https://ataintedcanvas.wordpress.com">My Blog</a>
+  </div>
+</section>
+
+<section class="wrapper">
+  <div class="content">
+    <h2>About Me:</h2>
+    <p>Hey. Before you continue to read about what I have to say, I would just like to thank you for dropping by my page. It means a lot to me. Really really.
 
 My name is Henry Yu. I was born in Tucson, Arizona to an engineer and an accountant. I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a typical strict asian household. I am currently a student at the University of California, Santa Barbara pursuing a degree in Computer Science. I also have a deep passion for statistical science, machine learning, and chaos theory. I like to read a lot of novels, news articles, and blogs. In simpler words, I like hearing about other people’s stories, whatever they may be. My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, and just going on long walks.
 
 Growing up, I definitely learned and matured a lot. I think my story is special, just as special as anyone else’s. I would love to hear your story and have the privilege of you hearing mine. </p>
-    <div>
-  </section>
+  <div>
+</section>
 
-  <section class="middle overlay" data-stellar-background-ratio="0.3">
-    <div class="content">
-      <h2>There is no place and no moment in history where I could stand and say 'Arithmetic begins here, now.'</h2>
-      <a class="btn" href="http://www.brainyquote.com/quotes/authors/a/alan_watts.html">Click Here For More On Alan Watts</a>
-    <div>
-  </section>
+<section class="middle overlay" data-stellar-background-ratio="0.3">
+  <div class="content">
+    <h2>There is no place and no moment in history where I could stand and say 'Arithmetic begins here, now.'</h2>
+    <a class="btn" href="http://www.brainyquote.com/quotes/authors/a/alan_watts.html">Click Here For More On Alan Watts</a>
+  <div>
+</section>
 
-  <section class="wrapper">
-    <div class="content">
-      <h2>Some Pictures Of Me</h2>
-      <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xat1/t31.0-8/10269137_10202849339927111_8017005867114760843_o.jpg" alt="">
-      <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-prn2/t31.0-8/1397944_10201513535292830_579572139_o.jpg" alt="">
-      <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/10256626_10204245744247476_5785669520365958004_o.jpg" alt="">
-      <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xta1/v/t1.0-9/10432109_10203125696374531_130344071599755090_n.jpg?oh=6a8c23d0e6523d52d6b353db0f5b1ab2&oe=56FB8D47" alt="">
-    <div>
-  </section>
+<section class="wrapper">
+  <div class="content">
+    <h2>Some Pictures Of Me</h2>
+    <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xat1/t31.0-8/10269137_10202849339927111_8017005867114760843_o.jpg" alt="">
+    <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-prn2/t31.0-8/1397944_10201513535292830_579572139_o.jpg" alt="">
+    <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xaf1/t31.0-8/10256626_10204245744247476_5785669520365958004_o.jpg" alt="">
+    <img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xta1/v/t1.0-9/10432109_10203125696374531_130344071599755090_n.jpg?oh=6a8c23d0e6523d52d6b353db0f5b1ab2&oe=56FB8D47" alt="">
+  <div>
+</section>
 
-  <section class="lower overlay" data-stellar-background-ratio="0.3">
-    <div class="content">
-      <h2>Experience</h2>
-      <a class="btn" href="https://github.com/henryhyu">My Github</a>
-    </div>
-  </section>
+<section class="lower overlay" data-stellar-background-ratio="0.3">
+  <div class="content">
+    <h2>Experience</h2>
+    <a class="btn" href="https://github.com/henryhyu">My Github</a>
+  </div>
+</section>
 
-  <section class="wrapper">
-    <div class="content">
-      <h2>Industry</h2>
-      <p>Software Development Intern - ONTRAPORT</p>
-      <p>Quality Assurance Test Automation Intern - Fortinet</p>
-    </div>
-  </section>
+<section class="wrapper">
+  <div class="content">
+    <h2>Industry</h2>
+    <p>Software Development Intern - ONTRAPORT</p>
+    <p>Quality Assurance Test Automation Intern - Fortinet</p>
+  </div>
+</section>
 
-  <section class="bottom">
-    <div class="content">
-      <p>Copyright <a href="">Henry Yu</a> 2016</p>
-    </div>
-  </section>
-  <script src="jquery-2.0.2.js"></script>
-  <script src="jquery.stellar.min.js"></script>
-  <script>
-    $.stellar();
-  </script>
+<section class="bottom">
+  <div class="content">
+    <p>Copyright <a href="">Henry Yu</a> 2016</p>
+  </div>
+</section>
+
+<script src="js/jquery-2.0.2.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script>
+  $.stellar();
+</script>
+
+<!-- count particles -->
+<div class="count-particles">
+  <span class="js-count-particles">--</span> particles
+</div>
+
+<!-- particles.js container -->
+<div id="particles-js"></div>
+
+<!-- scripts -->
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
+
+<!-- stats.js -->
+<script src="js/lib/stats.js"></script>
+<script>
+  var count_particles, stats, update;
+  stats = new Stats;
+  stats.setMode(0);
+  stats.domElement.style.position = 'absolute';
+  stats.domElement.style.left = '0px';
+  stats.domElement.style.top = '0px';
+  document.body.appendChild(stats.domElement);
+  count_particles = document.querySelector('.js-count-particles');
+  update = function() {
+    stats.begin();
+    stats.end();
+    if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+      count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+    }
+    requestAnimationFrame(update);
+  };
+  requestAnimationFrame(update);
+</script>
+
 </body>
 </html>
