--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section class="hero overlay" data-stellar-background-ratio="0.3">
   <div class="content">
     <h1 >Henry Yu</h1>
-    <h3>Welcome To My Life</h3>
+    <h3>Welcome To My Life: A Work In Progress</h3>
     <a class="btn" href="https://www.linkedin.com/in/henryhyu">My LinkedIn</a>
     <a class="btn" href="https://ataintedcanvas.wordpress.com">My Blog</a>
   </div>
