--- a/index.html
+++ b/index.html
@@ -14,17 +14,24 @@
     <h3>Welcome To My Life: A Work In Progress</h3>
     <a class="btn" href="https://www.linkedin.com/in/henryhyu">My LinkedIn</a>
     <a class="btn" href="https://ataintedcanvas.wordpress.com">My Blog</a>
+    <a class="btn" href="https://soundcloud.com/henriyouu">My SoundCloud</a>
   </div>
 </section>
 
 <section class="wrapper">
   <div class="content">
     <h2>About Me:</h2>
-    <p>Hey. Before you continue to read about what I have to say, I would just like to thank you for dropping by my page. It means a lot to me. Really really.
-
-My name is Henry Yu. I was born in Tucson, Arizona to an engineer and an accountant. I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a typical strict asian household. I am currently a student at the University of California, Santa Barbara pursuing a degree in Computer Science. I also have a deep passion for statistical science, machine learning, and chaos theory. I like to read a lot of novels, news articles, and blogs. In simpler words, I like hearing about other people’s stories, whatever they may be. My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, and just going on long walks.
-
-Growing up, I definitely learned and matured a lot. I think my story is special, just as special as anyone else’s. I would love to hear your story and have the privilege of you hearing mine. </p>
+    <p>Hey. Before you continue to read about what I have to share, I would just like to thank you for dropping by my page.
+      It means a lot to me. Really really. Without further ado, here is a little about me.
+      My name is Henry Yu. I was born in Tucson, Arizona to an engineer and an accountant.
+      I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a strict asian household.
+      I am currently a student at the University of California, Santa Barbara pursuing a degree in Computer Science.
+      I also have a deep passion for statistical science, machine learning, and chaos theory.
+      I like to read a lot of novels, news articles, and blogs.
+      In simpler words, I like hearing about other people’s stories, whatever or whoever they may be.
+      My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, and long walks.
+      Growing up, I definitely feel like I've seen and been through a lot. I think my story is special, just as special as anyone else’s.
+      I would love to hear your story and have the privilege of you hearing mine. </p>
   <div>
 </section>
 
