--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 <section class="wrapper">
   <div class="content">
     <h2>About Me:</h2>
-    <p>Hey. Before you continue to read about what I have to share, I would just like to thank you for dropping by my page.
-      It means a lot to me. Really really. Without further ado, here is a little about me.
-      My name is Henry Yu. I was born in Tucson, Arizona to an engineer and an accountant.
+    <p align="justify">  Hey. Before you continue to read about what I have to share, I would just like to thank you for dropping by my page.
+      It means a lot to me. Really really. Without further ado, here is a little about myself. My name is Henry Yu. I was born in Tucson, Arizona to an engineer and an accountant.
       I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a strict asian household.
       I am currently a student at the University of California, Santa Barbara pursuing a degree in Computer Science.
       I also have a deep passion for statistical science, machine learning, and chaos theory.
@@ -38,7 +37,7 @@
 <section class="middle overlay" data-stellar-background-ratio="0.3">
   <div class="content">
     <h2>There is no place and no moment in history where I could stand and say 'Arithmetic begins here, now.'</h2>
-    <a class="btn" href="http://www.brainyquote.com/quotes/authors/a/alan_watts.html">Click Here For More On Alan Watts</a>
+    <a class="btn" href="https://soundcloud.com/monstercat/nanobii-rainbow-road">Rainbow Road</a>
   <div>
 </section>
 
@@ -61,9 +60,20 @@
 
 <section class="wrapper">
   <div class="content">
+    <h2>Education</h2>
+    <p align="justify"> University of California, Santa Barbara </p>
+    
+    <p align="justify"> Monta Vista High School </p>
+  <div>
+</section>
+
+<section class="lowerlower overlay" data-stellar-background-ratio="0.3">
+  <div class="content">
     <h2>Industry</h2>
     <p>Software Development Intern - ONTRAPORT</p>
+    <a class="btn" href="https://ontraport.com">ONTRAPORT</a>
     <p>Quality Assurance Test Automation Intern - Fortinet</p>
+    <a class="btn" href="http://www.fortinet.com">Fortinet</a>
   </div>
 </section>
 
