--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               When I'm not doing anything quote on quote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
               <br><br>
               I also love watching and analyzing movies (<a href="http://www.imdb.com/title/tt0485947/" target="_blank">Mr. Nobody</a>), watching competitive eating videos (<a href="https://www.youtube.com/user/MegatoadStonie" target="_blank">Matt Stonie</a>),
-              drinking milk tea, & volunteering, especially with children. As cliche as it might sound, one thing that I always tell myself is that life is an experience.
+              drinking milk tea, & playing Kingdom Hearts. As cliche as it might sound, one thing that I always tell myself is that life is an experience.
               To meet as many people as I can, to go as many places as I can, and to just see the world. <br><br> </p>
             </div>
         </div>
@@ -105,7 +105,7 @@
                     <div id="counter"><span class="count">19</span><p>years</p></div>
                 </div>
                 <div class="col-sm-3">
-                    <div id="counter"><span class="count">1000</span><p>acai bowls</p></div>
+                    <div id="counter"><span class="count">500</span><p>acai bowls</p></div>
                 </div>
                 <div class="col-sm-3">
                     <div id="counter"><span class="count">355</span><p>seconds</p></div>
