--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <br><br>
                   I like to read a lot of novels, news articles, and blogs.
                   In simpler words, I like hearing about other people’s stories, whatever or whoever they may be.
-                  My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and long walks.
+                  My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and taking long walks.
                   Growing up, I definitely felt like I've seen and been through a lot. I think my story is special, just as special as anyone else’s.
                   I would love to hear your story and have the privilege of you hearing mine.
                 </p>
