--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   It means a lot to me. Really really. Without further ado, here is a little about myself.
                   <br><br>
                   I was born in Tucson, Arizona to an engineer and an accountant.
-                  I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a strict asian household.
+                  I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a traditional asian family.
                   I am majoring in computer science & minoring in statistical science at the University of California, Santa Barbara.
                   <br><br>
                   I like to read a lot of novels, news articles, and blogs.
@@ -105,7 +105,7 @@
                     <div id="counter"><span class="count">19</span><p>years</p></div>
                 </div>
                 <div class="col-sm-3">
-                    <div id="counter"><span class="count">500</span><p>acai bowls</p></div>
+                    <div id="counter"><span class="count">10000</span><p>bowls of rice</p></div>
                 </div>
                 <div class="col-sm-3">
                     <div id="counter"><span class="count">355</span><p>seconds</p></div>
