--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
           <a href="https://www.linkedin.com/in/henryhyu" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
         </div>
 
-        <div id="snapwidget">
+        <!-- <div id="snapwidget">
             <p>Check out my Instagram pictures at <a href="https://instagram.com/henriyouu/">@henriyouu_</a>!</p>
             <script src="http://snapwidget.com/js/snapwidget.js"></script>
             <iframe src="http://snapwidget.com/in/?u=aGVucml5b3V1fGlufDEyNXw1fDF8fHllc3w1fG5vbmV8b25TdGFydHx5ZXN8eWVz&ve=310116" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
-        </div>
+        </div> -->
 
         <p>&copy; Henry Yu</p>
     </section>
@@ -228,8 +228,8 @@
               directionX: 'center', // 'center', 'left' or 'right'. 'center' = dots bounce off edges
               directionY: 'center', // 'center', 'up' or 'down'. 'center' = dots bounce off edges
               density: 10000, // How many particles will be generated: one particle every n pixels
-              dotColor: '#E9F6F5',
-              lineColor: '#E9F6F5',
+              dotColor: '#00FFFF',
+              lineColor: '#00FFFF',
               particleRadius: 7, // Dot size
               lineWidth: 1,
               curvedLines: false,
