--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/css.css" media="Screen"/>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="shortcut icon" href="img/rain.png"/>
 </head>
@@ -45,12 +45,12 @@
             <div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li><a href="#hello">Hello</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#experience">Experience</a></li>
-                        <li><a href="#projects">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                        <li><a href="http://tinyurl.com/ze6fd7c" target="_blank">Life</a></li>
+                        <li><a href="#hello">你好</a></li>
+                        <li><a href="#about">关于</a></li>
+                        <li><a href="#experience">经验</a></li>
+                        <li><a href="#projects">项目</a></li>
+                        <li><a href="#contact">联系</a></li>
+                        <li><a href="http://tinyurl.com/ze6fd7c" target="_blank">生命</a></li>
                     </ul>
                 </div>
             </div>
@@ -60,58 +60,64 @@
 
     <!-- About -->
     <section id="about" class="fullPage">
-        <h1>A Little Introduction</h1>
-        <div class="row" id="hi-im-sol">
-            <div class="col-sm-4">
+        <h1>These Small Hours</h1>
+        <div class="row" id="hi-im-henry">
+            <div class="col-sm-6">
                 <h4>
-                    Hello there, I'm Henry:<br>
-                    college student & avid kingdom hearts fan residing in Santa Barbara, California
+                    Hello! I'm Henry:<br>
+                    a student interested in Computer & Statistical Science at the University of California, Santa Barbara.
                 </h4>
                 <img src="img/profpic.png">
             </div>
-            <div class="col-sm-4">
-                <p> Before you continue to read about what I have to share, I would just like to thank you for dropping by my page.
+            <div class="col-sm-6">
+                <p> Before you continue to read about what I have to share, I would like to thank you for dropping by my page.
                   It means a lot to me. Really really. Without further ado, here is a little about myself.
                   <br><br>
                   I was born in Tucson, Arizona to an engineer and an accountant.
                   I grew up in the sheltered arms of Silicon Valley (Cupertino to be exact) in a traditional asian family.
-                  I am majoring in computer science & minoring in statistical science at the University of California, Santa Barbara.
+                  I am current Junior majoring in computer science & minoring in statistical science at the University of California, Santa Barbara.
                   <br><br>
-                  I like to read a lot of novels, news articles, and blogs.
-                  In simpler words, I like hearing about other people’s stories, whatever or whoever they may be.
-                  My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and taking long walks.
+                  I like to read Murakami, Medium, Reddit, New York Times, and American Physical Society Journals.
+                  In simpler words, I like hearing about other people’s stories, whatever or whoever it may be about.
                   Growing up, I definitely felt like I've seen and been through a lot. I think my story is special, just as special as anyone else’s.
                   I would love to hear your story and have the privilege of you hearing mine.
+                  <br><br>
+                  My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and taking long walks.
+                  When I'm not doing anything quote on quote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
+                  <br><br>
+                  Recently, I decided to acquaint myself more with the field of computer science. I have had some exposure with computer networking, machine learning and web development.
+                  I've since interned for <a href="#experience">a few companies & organizations</a> as well as making a few <a href="#projects">projects for fun</a>.
+                  <br><br>
+                  I also love watching and analyzing movies (<a href="http://www.imdb.com/title/tt0485947/" target="_blank">Mr. Nobody</a>), watching competitive eating videos (<a href="https://www.youtube.com/user/MegatoadStonie" target="_blank">Matt Stonie</a>),
+                  drinking milk tea, & playing Kingdom Hearts. As cliche as it might sound, one thing that I always tell myself is that life is an experience.
+                  To meet as many people as I can, to go as many places as I can, and to just see the world.
+                  <br><br>
                 </p>
-            </div>
-            <div class="col-sm-4">
-              <p> Recently, I decided to acquaint myself more with the field of computer science. I have had some exposure with computer networking, machine learning and web development.
-              I've since interned for <a href="#experience">a few companies & organizations</a> as well as making a few <a href="#projects">projects for fun</a>.
-              <br><br>
-              When I'm not doing anything quote on quote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
-              <br><br>
-              I also love watching and analyzing movies (<a href="http://www.imdb.com/title/tt0485947/" target="_blank">Mr. Nobody</a>), watching competitive eating videos (<a href="https://www.youtube.com/user/MegatoadStonie" target="_blank">Matt Stonie</a>),
-              drinking milk tea, & playing Kingdom Hearts. As cliche as it might sound, one thing that I always tell myself is that life is an experience.
-              To meet as many people as I can, to go as many places as I can, and to just see the world. <br><br> </p>
             </div>
         </div>
         <br>
         <p style="text-align:center">If you want to know more about me, feel free to <a href="#experience">scroll down</a> or <a href="#contact">contact me</a>!</p>
 
         <div id="fun-facts">
-            <h3>Fun Facts</h3>
+            <h3>Statistics</h3>
             <div class="row" id="funfacts">
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div id="counter"><span class="count">19</span><p>years</p></div>
                 </div>
-                <div class="col-sm-3">
-                    <div id="counter"><span class="count">10000</span><p>bowls of rice</p></div>
+                <div class="col-sm-2">
+                    <div id="counter"><span class="count">185</span><p>lbs</p></div>
                 </div>
-                <div class="col-sm-3">
-                    <div id="counter"><span class="count">355</span><p>seconds</p></div>
+                <div class="col-sm-2">
+                    <div id="counter"><span class="count">72</span><p>in</p></div>
                 </div>
-                <div class="col-sm-3">
-                    <div id="counter"><span class="count">915</span><p>pounds</p></div>
+                <div class="col-sm-2">
+                    <div id="counter"><span class="count">62</span><p>secs (water)</p></div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="counter"><span class="count">355</span><p>secs (land)</p></div>
+                </div>
+                <div class="col-sm-2">
+                    <div id="counter"><span class="count">915</span><p>lbs (3)</p></div>
                 </div>
             </div>
         </div>
@@ -119,16 +125,21 @@
         <div id="education">
             <h3>Education</h3>
             <h6>University of California, Santa Barbara</h6>
-            <p>Computer Science, Statistical Science<br>2014-2018</p>
-            <h6>Monta Vista High School</h6>
+            <p>Major: Computer Science (College of Engineering)<br> Minor: Statistical Science (College of Letters and Science)<br> 2014-2018</p>
+            <h6>Monta Vista High School (Cupertino, CA)</h6>
             <p>2010-2014</p>
+            <h6>Sam H. Lawson Middle School (Cupertino, CA)</h6>
+            <p>2007-2010</p>
+            <h6>Abraham Lincoln Elementary School (Cupertino, CA)</h6>
+            <p>2004-2007</p>
+            <h6>Ruskin Elementary School (Berryessa, CA)</h6>
+            <p>2002-2004</p>
         </div>
 
         <a href=#experience><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
     </section>
 
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/ocean.png"></div>
-
 
     <!-- Experience -->
     <section id="experience" class="fullPage">
@@ -137,8 +148,8 @@
         <div class="row">
             <div class="col-sm-6">
                 <p>
-                <a href="https://ontraport.com/" target="_blank"><span>ONTRAPORT</span></a><br>Software Development and Quality Assurance Intern<br>January 2016 - Present<br><br>
-                <a href="http://www.akpsiucsb.com/" target="_blank"><span>Alpha Kappa Psi</span></a><br>Active Brother - Technology Committee<br>May 2015 - Present<br><br>
+                <a href="https://ontraport.com/" target="_blank"><span>ONTRAPORT</span></a><br>Software Development & Quality Assurance Intern<br>January 2016 - Present<br><br>
+                <a href="http://www.akpsiucsb.com/" target="_blank"><span>Alpha Kappa Psi</span></a><br>Technology Committee, Internal Affairs<br>May 2015 - Present<br><br>
                 <a href="http://www.fortinet.com/" target="_blank"><span>Fortinet</span></a><br>Quality Assurance Test Automation Intern<br>June 2015 - September 2015<br><br>
                 </p>
             </div>
@@ -158,31 +169,33 @@
     <!-- Projects -->
     <section id="projects" class="fullPage">
         <h1>Featured Project</h1>
-        <h1> Work in Progress. Coming Soon. </h1>
+        <center><h4> Login, Registration System using PHP and MySQLi </h4></center>
+        <br /><br />
+        <center><img src="login.png" alt="login" style="width:1224px;height:650px;"></center>
+        <br /><br />
         <a href=#contact><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
     </section>
 
     <div class="parallax-window" data-parallax="scroll" data-image-src="img/oceansky.png"></div>
+    <br /><br />
 
     <!-- Contact -->
     <section id="contact" class="fullPage">
         <h1>Contact</h1>
-
-        <p>Still curious? Check out my full <a href="resume.pdf" target="_blank">resume</a> or send me an email!</p>
+        <br />
+        <p>For the eccentric individuals: Check out my static <a href="resume.pdf" target="_blank">page</a>.</p>
 
         <div id="social">
-          <a href="https://www.facebook.com/henriyouu" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a>
           <a href="mailto:henryyu.yu@gmail.com"><i class="fa fa-envelope-o fa-3x"></i></a>
-          <a href="https://www.linkedin.com/in/henryhyu" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a href="resume.pdf"><i class="fa fa-umbrella fa-4x"></i></a>
+          <a href="https://github.com/henryhyu" target="_blank"><i class="fa fa-github-square fa-4x"></i></a>
+          <a href="https://www.linkedin.com/in/henryhyu" target="_blank"><i class="fa fa-linkedin-square fa-4x"></i></a>
+          <a href="https://ataintedcanvas.wordpress.com/" target=:"_blank"><i class="fa fa-wordpress fa-4x"></i></a>
         </div>
 
-        <!-- <div id="snapwidget">
-            <p>Check out my Instagram pictures at <a href="https://instagram.com/henriyouu/">@henriyouu_</a>!</p>
-            <script src="http://snapwidget.com/js/snapwidget.js"></script>
-            <iframe src="http://snapwidget.com/in/?u=aGVucml5b3V1fGlufDEyNXw1fDF8fHllc3w1fG5vbmV8b25TdGFydHx5ZXN8eWVz&ve=310116" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%;"></iframe>
-        </div> -->
-
         <p>&copy; Henry Yu</p>
+
+        <div class="parallax-window" data-parallax="scroll" data-image-src="img/galaxy.png"></div>
     </section>
 
     <!-- JS -->
@@ -227,10 +240,10 @@
               maxSpeedY: 0.7,
               directionX: 'center', // 'center', 'left' or 'right'. 'center' = dots bounce off edges
               directionY: 'center', // 'center', 'up' or 'down'. 'center' = dots bounce off edges
-              density: 10000, // How many particles will be generated: one particle every n pixels
+              density: 6500, // How many particles will be generated: one particle every n pixels
               dotColor: '#00FFFF',
               lineColor: '#00FFFF',
-              particleRadius: 7, // Dot size
+              particleRadius: 3, // Dot size
               lineWidth: 1,
               curvedLines: false,
               proximity: 100, // How close two dots need to be before they join
@@ -259,6 +272,5 @@
         });
     });
     </script>
-
   </body>
 </html>
