--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
         <p>&copy; Henry Yu</p>
 
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/galaxy.png"></div>
+        <audio controls autoplay>
+  <source src="audio/bright.ogg" type="audio/ogg">
+  <source src="audio/bright.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
     </section>
 
     <!-- JS -->
@@ -235,20 +240,20 @@
         $(document).ready(function() {
             $('#particles').particleground({
               minSpeedX: 0.1,
-              maxSpeedX: 0.7,
+              maxSpeedX: 1.0,
               minSpeedY: 0.1,
-              maxSpeedY: 0.7,
+              maxSpeedY: 1.0,
               directionX: 'center', // 'center', 'left' or 'right'. 'center' = dots bounce off edges
               directionY: 'center', // 'center', 'up' or 'down'. 'center' = dots bounce off edges
               density: 6500, // How many particles will be generated: one particle every n pixels
               dotColor: '#00FFFF',
               lineColor: '#00FFFF',
-              particleRadius: 3, // Dot size
-              lineWidth: 1,
-              curvedLines: false,
-              proximity: 100, // How close two dots need to be before they join
+              particleRadius: 5, // Dot size
+              lineWidth: 0.5,
+              curvedLines: true,
+              proximity: 110, // How close two dots need to be before they join
               parallax: true,
-              parallaxMultiplier: 6, // The lower the number, the more extreme the parallax effect
+              parallaxMultiplier: 10, // The lower the number, the more extreme the parallax effect
               onInit: function() {},
               onDestroy: function() {}
             });
