--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
             <p>2004-2007</p>
             <h6>Ruskin Elementary School (Berryessa, CA)</h6>
             <p>2002-2004</p>
+            <h6>Milpitas Christian School (San Jose, CA)</h6>
+            <p>2000-2002</p>
         </div>
 
         <a href=#experience><i class="fa fa-angle-down fa-5x down-arrow"></i></a>
