--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   I would love to hear your story and have the privilege of you hearing mine.
                   <br><br>
                   My hobbies other than sitting at my computer all day include competitive (and casual) swimming, running, lifting, and taking long walks.
-                  When I'm not doing anything quote on quote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
+                  When I'm not doing anything quote unquote productive, I like to write. Find me on <a href="https://ataintedcanvas.wordpress.com/" target="_blank">WordPress</a>.
                   <br><br>
                   Recently, I decided to acquaint myself more with the field of computer science. I have had some exposure with computer networking, machine learning and web development.
                   I've since interned for <a href="#experience">a few companies & organizations</a> as well as making a few <a href="#projects">projects for fun</a>.
@@ -105,7 +105,7 @@
                     <div id="counter"><span class="count">19</span><p>years</p></div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="counter"><span class="count">185</span><p>lbs</p></div>
+                    <div id="counter"><span class="count">6</span><p>drops</p></div>
                 </div>
                 <div class="col-sm-2">
                     <div id="counter"><span class="count">72</span><p>in</p></div>
