--- a/index.html
+++ b/index.html
@@ -199,10 +199,11 @@
 
         <div class="parallax-window" data-parallax="scroll" data-image-src="img/galaxy.png"></div>
         <audio controls autoplay>
-  <source src="audio/bright.ogg" type="audio/ogg">
-  <source src="audio/bright.mp3" type="audio/mpeg">
+  <source src="audio/working.ogg" type="audio/ogg">
+  <source src="audio/working.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
+
     </section>
 
     <!-- JS -->
